--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,11 @@
             "email": "xjryanse@sina.com"
         }
     ],
-    "require": {},
+    "require": {
+        "xjryanse/system": "0.0.*",
+        "xjryanse/traits": "0.0.*",
+        "xjryanse/user": "0.0.*"
+	},
     "license": "MIT",
     "autoload": {
         "psr-4": {
